# flake-templates

./: flake.nix
poetry2nix/: .envrc  flake.nix  pyproject.toml
pyproject2nix/: flake.nix  flake_model.nix  pyproject.toml
