[project]
name = "pyproject2nix"
version = "0.1.0"
description = ""
authors = [
    {name = "jb",email = "jeanb.rocher@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff (>=0.11.10,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
